Criando teclado e começando a estilizar

--- a/forca.html
+++ b/forca.html
@@ -9,14 +9,54 @@
 </head>
 <body>
     <div class="container">
-        <div id="imagem">
-
+        <div id="imagem">        </div>
+        <div id="palavra-secreta">
+            <div class="letras"></div>
+            <div class="letras"></div>
+            <div class="letras"></div>
+            <div class="letras"></div>
+            <div class="letras"></div>
         </div>
-        <div id="palavra-secreta"></div>
-        <div id="teclado"></div>
+        <div id="teclado">
+            <div class="teclas">
+                <button id="tecla-A" onclick="">A</button>
+                <button id="tecla-B" onclick="">B</button>
+                <button id="tecla-C" onclick="">C</button>
+                <button id="tecla-D" onclick="">D</button>
+                <button id="tecla-E" onclick="">E</button>
+                <button id="tecla-F" onclick="">F</button>
+                <button id="tecla-G" onclick="">G</button>
+                <button id="tecla-H" onclick="">H</button>
+                <button id="tecla-I" onclick="">I</button>               
+            </div>
+            <div class="teclas">
+                <button id="tecla-J" onclick="">J</button>
+                <button id="tecla-K" onclick="">K</button>
+                <button id="tecla-L" onclick="">L</button>
+                <button id="tecla-M" onclick="">M</button>
+                <button id="tecla-N" onclick="">N</button>
+                <button id="tecla-O" onclick="">O</button>
+                <button id="tecla-P" onclick="">P</button>
+                <button id="tecla-Q" onclick="">Q</button>
+                <button id="tecla-R" onclick="">R</button>               
+            </div>
+            <div class="teclas">
+                <button id="tecla-S" onclick="">S</button>
+                <button id="tecla-T" onclick="">T</button>
+                <button id="tecla-U" onclick="">U</button>
+                <button id="tecla-V" onclick="">V</button>
+                <button id="tecla-W" onclick="">W</button>
+                <button id="tecla-X" onclick="">X</button>
+                <button id="tecla-Y" onclick="">Y</button>
+                <button id="tecla-Z" onclick="">Z</button>
+                <button id="btn-reiniciar" onclick="">#</button>               
+            </div>
+        </div>
         <div id="categoria"></div>
 
 
     </div>
+    
+    <script src="js/script.js"></script>
 </body>
 </html>
