finalizando os estilos

--- a/forca.html
+++ b/forca.html
@@ -52,7 +52,9 @@
                 <button id="btn-reiniciar" onclick="">#</button>               
             </div>
         </div>
-        <div id="categoria"></div>
+        <div id="categoria">
+            
+        </div>
 
 
     </div>
