Lógica para pegar letra no html

--- a/forca.html
+++ b/forca.html
@@ -19,41 +19,41 @@
         </div>
         <div id="teclado">
             <div class="teclas">
-                <button id="tecla-A" onclick="">A</button>
-                <button id="tecla-B" onclick="">B</button>
-                <button id="tecla-C" onclick="">C</button>
-                <button id="tecla-D" onclick="">D</button>
-                <button id="tecla-E" onclick="">E</button>
-                <button id="tecla-F" onclick="">F</button>
-                <button id="tecla-G" onclick="">G</button>
-                <button id="tecla-H" onclick="">H</button>
-                <button id="tecla-I" onclick="">I</button>               
+                <button id="tecla-A" onclick="verificaletraEscolhida('A')">A</button>
+                <button id="tecla-B" onclick="verificaletraEscolhida('B')">B</button>
+                <button id="tecla-C" onclick="verificaletraEscolhida('C')">C</button>
+                <button id="tecla-D" onclick="verificaletraEscolhida('D')">D</button>
+                <button id="tecla-E" onclick="verificaletraEscolhida('E')">E</button>
+                <button id="tecla-F" onclick="verificaletraEscolhida('F')">F</button>
+                <button id="tecla-G" onclick="verificaletraEscolhida('G')">G</button>
+                <button id="tecla-H" onclick="verificaletraEscolhida('H')">H</button>
+                <button id="tecla-I" onclick="verificaletraEscolhida('I')">I</button>               
             </div>
             <div class="teclas">
-                <button id="tecla-J" onclick="">J</button>
-                <button id="tecla-K" onclick="">K</button>
-                <button id="tecla-L" onclick="">L</button>
-                <button id="tecla-M" onclick="">M</button>
-                <button id="tecla-N" onclick="">N</button>
-                <button id="tecla-O" onclick="">O</button>
-                <button id="tecla-P" onclick="">P</button>
-                <button id="tecla-Q" onclick="">Q</button>
-                <button id="tecla-R" onclick="">R</button>               
+                <button id="tecla-J" onclick="verificaletraEscolhida('J')">J</button>
+                <button id="tecla-K" onclick="verificaletraEscolhida('K')">K</button>
+                <button id="tecla-L" onclick="verificaletraEscolhida('L')">L</button>
+                <button id="tecla-M" onclick="verificaletraEscolhida('M')">M</button>
+                <button id="tecla-N" onclick="verificaletraEscolhida('N')">N</button>
+                <button id="tecla-O" onclick="verificaletraEscolhida('O')">O</button>
+                <button id="tecla-P" onclick="verificaletraEscolhida('P')">P</button>
+                <button id="tecla-Q" onclick="verificaletraEscolhida('Q')">Q</button>
+                <button id="tecla-R" onclick="verificaletraEscolhida('R')">R</button>               
             </div>
             <div class="teclas">
-                <button id="tecla-S" onclick="">S</button>
-                <button id="tecla-T" onclick="">T</button>
-                <button id="tecla-U" onclick="">U</button>
-                <button id="tecla-V" onclick="">V</button>
-                <button id="tecla-W" onclick="">W</button>
-                <button id="tecla-X" onclick="">X</button>
-                <button id="tecla-Y" onclick="">Y</button>
-                <button id="tecla-Z" onclick="">Z</button>
+                <button id="tecla-S" onclick="verificaletraEscolhida('S')">S</button>
+                <button id="tecla-T" onclick="verificaletraEscolhida('T')">T</button>
+                <button id="tecla-U" onclick="verificaletraEscolhida('U')">U</button>
+                <button id="tecla-V" onclick="verificaletraEscolhida('V')">V</button>
+                <button id="tecla-W" onclick="verificaletraEscolhida('W')">W</button>
+                <button id="tecla-X" onclick="verificaletraEscolhida('X')">X</button>
+                <button id="tecla-Y" onclick="verificaletraEscolhida('Y')">Y</button>
+                <button id="tecla-Z" onclick="verificaletraEscolhida('Z')">Z</button>
                 <button id="btn-reiniciar" onclick="">#</button>               
             </div>
         </div>
         <div id="categoria">
-            
+
         </div>
 
 
