--- a/forca.html
+++ b/forca.html
@@ -30,7 +30,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">Jump Mario</a>
               <a class="dropdown-item" target="_blank" href="https://bytiagoassis.github.io/decoder/decoder.html">Decoder</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Jogo da Memória</a>
             </div>
           </li>
         </ul>
@@ -57,7 +57,7 @@
                     <br>
                     
                     <label for="categoria">Categoria:</label> <br>
-                    <input type="text" id="categoria" size="10" onkeyup="validaCategoria()">
+                    <input type="text" id="categoria" size="8" onkeyup="validaCategoria()">
                     <div id="txtCategoria"></div>               
                     
                     </form>
